--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Sample MVP Architecture Component</string>
+    <string name="search">cari</string>
+    <string name="msg_no_data">No data returned. Pull to refresh.</string>
+    <string name="msg_empty_search_result">No result found.</string>
 </resources>
